Nava se misca dupa mouse si WASD si trage proiectile

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=4EF2EB19496FCE9AE9A41C84B7B70817
+ProjectID=BB871CB74FB94B1E618C41809F3FB9B8
 ProjectName=Twin Stick Game Template
 
-[/Script/SpaceShipGame.SpaceShipGameCharacter]
+[/Script/MyProject.MyProjectCharacter]
 FixedCameraPitch=-45.0
 FixedCameraDistance=1500.0
 
