--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/TwinStick/BluePrnts/MyProjectGameMode_BP.MyProjectGameMode_BP_C
+GlobalDefaultGameMode=/Script/MyProject.MyProjectGameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
@@ -28,10 +28,6 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-[/Script/AIModule.AISystem]
-PerceptionSystemClassName=None
-bEnableDebuggerPlugin=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -73,4 +69,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
