--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
+EditorStartupMap=/Game/Levels/World.World
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
+GameDefaultMap=/Game/Levels/World.World
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/TwinStick/BluePrnts/MyProjectGameMode_BP.MyProjectGameMode_BP_C
 GlobalDefaultServerGameMode=None
@@ -69,4 +69,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
