Vezi commitul anterior

--- a/MyProject.uproject
+++ b/MyProject.uproject
@@ -10,11 +10,17 @@
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
 				"Engine",
-        "AIModule",
-        "CoreUObject",
-        "UMG"
-         
+				"AIModule",
+				"CoreUObject",
+				"UMG"
 			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "DonAINavigation",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/81b4bd085c8c41508edfeb160b6ddf62"
 		}
 	]
 }
