--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,6 +29,13 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/AIModule.AISystem]
+PerceptionSystemClassName=/Script/AIModule.AIPerceptionSystem
+bEnableDebuggerPlugin=True
+DefaultSightCollisionChannel=ECC_Visibility
+bAllowControllersAsEQSQuerier=False
+AcceptanceRadius=1.000000
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -69,5 +76,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
