--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/World.World
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/MyProject.MyProjectGameMode
+GlobalDefaultGameMode=/Game/BP/MyProjectGameMode_BP.MyProjectGameMode_BP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
@@ -76,5 +76,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
